# bilka_mcp

./: README.md  bilka_client.py  pyproject.toml
src/: server.py
